# rental

./: .gitignore  Cargo.toml  README.md
rental-impl/: Cargo.toml
rental-impl/src/: lib.rs
src/: lib.rs  old.rs
tests/: clone.rs  compile_fail.rs  complex.rs  complex_mut.rs  covariant.rs  debug.rs  drop_order.rs  generic.rs  lt_params.rs  map.rs  simple_mut.rs  simple_ref.rs  string.rs  subrental.rs  target_ty_hack.rs  trait.rs  unused.rs  vec_slice.rs
