[package]
name = "rental"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["Jameson Ernst <jameson@jpernst.com>"]
description = "A macro to generate self-referential structs."
keywords = ["lifetime", "ownership", "borrowing", "self", "reference"]
categories = ["rust-patterns", "no-std"]
repository = "https://github.com/jpernst/rental"
documentation = "https://docs.rs/rental"

[workspace]
members = ["rental-impl"]

[features]
default = ["std"]
std = ["stable_deref_trait/std"]

[dependencies]
rental-impl = { path = "rental-impl" }
stable_deref_trait = { version = "1.0.0", default-features = false }

[dev-dependencies]
compiletest_rs = "0.2.5"
