[package]
name = "rental-impl"
version = "0.5.0"
license = "MIT/Apache-2.0"
authors = ["Jameson Ernst <jameson@jpernst.com>"]
description = "An implementation detail of rental. Should not be used directly."
repository = "https://github.com/jpernst/rental"
documentation = "https://docs.rs/rental"
homepage = "https://www.jpernst.com"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.2"
procedural-masquerade = "=0.1.5"
quote = "0.4.2"
syn = { version = "0.12.13", features = ["full", "fold", "extra-traits"] }
