[package]
name = "rental-impl"
version = "0.5.0"
license = "MIT/Apache-2.0"
authors = ["Jameson Ernst <jameson@jpernst.com>"]
description = "An implementation detail of rental. Should not be used directly."
repository = "https://github.com/jpernst/rental"
documentation = "https://docs.rs/rental"
homepage = "https://www.jpernst.com"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.3.7"
quote = "0.5.2"
syn = { version = "0.13.1", features = ["full", "fold", "visit", "extra-traits"] }
